# math_rs

./: Cargo.toml  README.md  pyproject.toml
benches/: bench.rs
python/: linear_regression.py
src/: algorithms.rs  main.rs  ops_nalgebra.rs
tests/: test_ops_nalgebra.rs
