[tool.poetry]
name = "math_rs"
version = "0.0.1"
description = "Math operations in Rust"
authors = ["Maksym Tatariants <userboxj@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
scikit-learn = "0.24.2"
matplotlib = "3.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"